--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
+    "@vimeo/player": "^2.17.1",
     "lodash.throttle": "^4.1.1",
     "modern-normalize": "^1.1.0",
+    "native-promise-only": "^0.8.1",
     "simplelightbox": "^2.10.3",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "weakmap-polyfill": "^2.0.4"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
